bin_PROGRAMS = test-linked-hash-map test-thread test-thread-pool

test_linked_hash_map_SOURCES = test-linked-hash-map.cpp ../src/utils/linked-hash-map.cpp

test_linked_hash_map_CPPFLAGS = -I../src/utils

test_thread_CPPFLAGS = -I../src/utils

test_thread_LDFLAGS =

test_thread_SOURCES = test-thread.cpp ../src/utils/thread-job.cpp ../src/utils/thread.cpp

test_thread_pool_CPPFLAGS = -I../src/utils

test_thread_pool_LDFLAGS =

test_thread_pool_SOURCES = test-thread.cpp ../src/utils/thread-job.cpp ../src/utils/thread.cpp ../src/utils/thread-pool.cpp

ACLOCAL_AMFLAGS = -I m4